<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_home_black_24px"
            android:checked="true"
            android:title="@string/activity_home_title" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_near_me_black_24px"
            android:checkable="true"
            android:title="@string/activity_explore_title" />
        <item
            android:id="@+id/nav_offline_areas"
            android:icon="@drawable/ic_cloud_off_black_24px"
            android:checkable="true"
            android:title="@string/offline_areas_action_bar_title" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings_title" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/help_title" />
    </group>

</menu>
