<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/content_offline_areas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".maps.activities.OfflineAreas"
                tools:showIn="@layout/activity_offline_areas">


    <LinearLayout
        android:id="@+id/linearLayoutDownload"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/previously_downloaded_items_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/offline_areas_pre_downloaded_areas_title"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/offline_areas_no_downloaded_areas_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/list_view_downloaded_areas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/download_choices_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/offline_areas_download_options_title"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/custom_area_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?android:attr/selectableItemBackground"
            android:drawableLeft="@drawable/ic_map_black_24px"
            android:drawablePadding="8dp"
            android:text="@string/offline_areas_button_download_custom_area"
            android:textAlignment="viewStart"
            android:textStyle="normal"/>
    </LinearLayout>
</RelativeLayout>
